--- a/styles.css
+++ b/styles.css
@@ -78,15 +78,6 @@ hr {
   align-items: center;
 }
 
-.eth-img {
-  height: auto;
-  width: 285px;
-  border-radius: 10px;
-  margin-left: 20px;
-  margin-top: 20px;
-
-}
-
 .eye {
   position: absolute;
   top:50%;
@@ -129,7 +120,7 @@ hr {
   background-color: hsl(178, 100%, 50%);
   opacity: 0;
   transition: .5s ease;
-  transform: translate(0, -2px;);
+  transform: translate(0, -2px);
 }
 
 /* active states */
@@ -151,4 +142,37 @@ hr {
 .Jules:hover {
   cursor: pointer;
   color: hsl(178, 100%, 50%);
+}
+
+
+
+.eth-container {
+  padding: 20px 20px 0px 20px;
+  transition: .5s ease;
+}
+
+.eth-container:hover > .eth-img:before{
+  content: url('images/icon-view.svg');
+  position: absolute;
+  width: 100%;
+  height: calc(100% - 5px);
+  background-color: rgb(0 255 247 / 50%);
+  border-radius: 10px;
+  transition: .5s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.eth-img {
+  height: auto;
+  width: 285px;
+  position: relative;
+}
+
+.eth-img > img {
+  width: 100%;
+  border-radius: 10px;
+  height: auto;
 }
